--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,14 @@ header {
     position: relative;
 }
 
+.rowCard {
+    border: none !important;
+    height: auto !important;
+    width: auto;
+    margin: 0;
+    padding: 0;
+}
+
 .form {
     padding: 1rem;
     max-width: 60rem;
